syntax = "proto3";

package PHP.UserService;

message User {
  string username = 1;
  string password = 2;
  string new_password = 3;
}
message UserResponse {
    string message = 1;
}

service UserService {
  // Register a new user
  rpc RegisterUser(User) returns (UserResponse);

  // Login with user credentials
  rpc Login(User) returns (UserResponse);

  // Update user information
  rpc UpdateUser(User) returns (UserResponse);

  // Delete a user account
  rpc DeleteUser(User) returns (UserResponse);

  // Fetch a user account
  rpc GetUser(User) returns (UserResponse);

  // Fetch all user account
  rpc GetAllUser(User) returns (stream UserResponse);
}

service Stream {
    rpc FetchRegistered(User) returns (stream UserResponse);
    rpc FetchLogin(User) returns (stream UserResponse);
    rpc FetchDelete(User) returns (stream UserResponse);
    rpc FetchUpdates(User) returns (stream UserResponse);
    rpc FetchUser(User) returns (UserResponse);
    rpc FetchAllUser(User) returns (stream UserResponse);
}